@@ -119,6 +119,8 @@ Version SVN HEAD (?)
     scroll to the newly added (combined) instrument.
   * Draw icons on individual dimension region zones, similar to the icons
     already been drawn on regions.
+  * Fixed loop and sample reference icons being displayed incorrectly sometimes,
+    because unused dimension regions were not ignored.
 
 Version 1.0.0 (2015-07-17)
 
